--- a/geog176A.html
+++ b/geog176A.html
@@ -320,7 +320,7 @@ $(document).ready(function () {
 <li>using R Markdown to add information</li>
 <li>knitting it to a webpage</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">Lab 2</a> # Lab 2 learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">Lab 2: Data Wrangling</a> # learning points:</p>
 <ul>
 <li>reading in data using readr</li>
 <li>Dplyer verbs(select, filter, mutate, group_by, summarize, arrange)</li>
@@ -330,7 +330,7 @@ $(document).ready(function () {
 <li>ggplot (add data, layers, labels, themes, facets)</li>
 <li>testing ’message = FALSE, warning = FALSE, eval = FALSE, echo = FALSE in R Markdown</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">Lab 3</a> # Lab 3 learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">Lab 3: Projections, Distances, and Mapping</a> # learning points:</p>
 <ul>
 <li>using Sf package:
 <ul>
@@ -345,7 +345,7 @@ $(document).ready(function () {
 </ul></li>
 <li>assigning labels to specified points on plot</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html">Lab 4</a> # Lab 4 learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html">Lab 4: Tesselations, Spatial Joins, and Point-in-Polygon</a> # learning points:</p>
 <ul>
 <li>generated centroids as anchor points for tessellations
 <ul>
@@ -368,38 +368,36 @@ $(document).ready(function () {
 <li>function building</li>
 <li>Point-in-polygon analysis</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html">Lab 5</a> # Lab 5 learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html">Lab 05: Rasters analysis and Remote Sensing</a> # learning points:</p>
 <ul>
-<li><ul>
-<li></li>
-<li></li>
-<li></li>
+<li>create rasters
+<ul>
+<li>raster stacks and raster bricks</li>
+<li>bounty boxes</li>
+<li>extent, resolution, dimensions of a raster</li>
 </ul></li>
-<li><ul>
-<li></li>
-<li></li>
+<li>LSAT imagery and rasters
+<ul>
+<li>RGB colors to empasize certain image traits</li>
 </ul></li>
-<li><ul>
-<li></li>
-<li></li>
-</ul></li>
+<li>Applying thresholds to raster images</li>
+<li>kmeans analysis</li>
 </ul>
-</div>
-<div id="lab-6-learning-points" class="section level1">
-<h1>Lab 6 learning points:</h1>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-06.html">Lab 6: Terrain Analysis</a> # learning points:</p>
 <ul>
-<li><ul>
-<li></li>
-<li></li>
-<li></li>
+<li>Open Street Map
+<ul>
+<li>Performed Overpass queries on key, tag combinations</li>
+<li>Extracted polygon and lines features from OSM database</li>
 </ul></li>
-<li><ul>
-<li></li>
-<li></li>
+<li>Whitebox tools
+<ul>
+<li>Slope, aspect, contour, and HAND rasters</li>
 </ul></li>
-<li><ul>
-<li></li>
-<li></li>
+<li>Terrain analysis</li>
+<li>Flood Impact assessment
+<ul>
+<li>Impacted buildings</li>
 </ul></li>
 </ul>
 </div>
