--- a/CV.html
+++ b/CV.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Angus</title>
+<title>Resume</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -306,26 +306,97 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Angus</h1>
+<h1 class="title toc-ignore">Resume</h1>
 
 </div>
 
 
-<div id="education" class="section level1">
-<h1>Education</h1>
+<center>
+<div id="angus-watters" class="section level1">
+<h1>ANGUS WATTERS</h1>
+</center>
+<center>
+<div id="castillo-st.-santa-barbara-ca-93105-805.895.1590-adwattersgrubsteinucsb.edu" class="section level4">
+<h4>2021 Castillo St. Santa Barbara, CA 93105| 805.895.1590| <a href="mailto:adwattersgrubstein@ucsb.edu" class="email">adwattersgrubstein@ucsb.edu</a></h4>
+</center>
+<center>
+</div>
+<div id="work-objective" class="section level2">
+<h2>Work Objective:</h2>
+</center>
+<div id="i-am-a-college-senior-looking-for-a-position-to-utilize-my-responsible-work-ethic-and-enthusiasm-for-learning.-i-am-a-quick-learner-ready-and-willing-to-take-training-for-any-position.-i-have-a-thirst-for-knowledge-and-look-forward-to-continued-growth-after-graduation.-i-believe-to-be-a-responsible-employee-one-must-tackle-every-task-with-diligence-and-care." class="section level4">
+<h4>I am a college Senior looking for a position to utilize my responsible work ethic and enthusiasm for learning. I am a quick learner; ready and willing to take training for any position. I have a thirst for knowledge and look forward to continued growth after graduation. I believe to be a responsible employee one must tackle every task with diligence and care.</h4>
+</div>
+</div>
+<div id="experience" class="section level2">
+<h2>Experience</h2>
 <ul>
-<li>Laguna Blanca School (<strong>2011 - 2015</strong>)</li>
-<li>Santa Barbara City College (<strong>2016 - 2019</strong>)</li>
-<li>University of California, Santa Barbara (<strong>2019 - present</strong>)</li>
+<li><h4 id="soraa-inc.-goleta-ca-intern-spring-2015">SORAA INC. Goleta, CA, <em>Intern</em> (<strong>Spring 2015</strong>)</h4>
+<ul>
+<li>Gained an introduction into the production of GaN crystals used in LEDs and contributed in organizing data collected from GaN production runs to pinpoint specific points in the reaction</li>
+</ul></li>
+<li><h4 id="the-garden-market-carpinteria-ca-cashier-server-2017">THE GARDEN MARKET Carpinteria, CA <em>Cashier &amp; Server</em> (<strong>2017</strong>)</h4>
+<ul>
+<li>Provided friendly and efficient customer service; striving to give customers a positive dining experience by attending to their needs promptly and enthusiastically</li>
+</ul></li>
+<li><h4 id="gallup-stribling-orchids-carpinteria-ca-sales-representative-2018">GALLUP &amp; STRIBLING ORCHIDS Carpinteria, CA <em>Sales Representative</em> (<strong>2018</strong>)</h4>
+<ul>
+<li>Provided exceptional customer service while processing phone orders</li>
+<li>Provided support during hectic Mother’s Day season</li>
+<li>Collaborated with the flower production floor and truck drivers receiving orders, maintaining clear communication between all parties</li>
+</ul></li>
+<li><h4 id="santa-barbara-running-santa-barbara-ca-sales-representative-2019---present">SANTA BARBARA RUNNING Santa Barbara, CA, <em>Sales Representative</em> (<strong>2019 - present</strong>)</h4>
+<ul>
+<li>Provided information and options on shoes based on an individual’s goals and needs</li>
+<li>During busy hours, I comfortably multitask, ensuring each customer’s requests are acknowledged and attended to</li>
+</ul></li>
 </ul>
 </div>
-<div id="experience" class="section level1">
-<h1>Experience</h1>
+<div id="volunteering-experience" class="section level2">
+<h2>Volunteering Experience</h2>
 <ul>
-<li>SORAA LED, <em>Intern</em> (<strong>2015</strong>)</li>
-<li>Gallup &amp; Stribling Orchids, <em>Sales Representative</em> (<strong>2018</strong>)</li>
-<li>Santa Barbara Running, <em>Sales Representative</em> (<strong>2019 - present</strong>)</li>
+<li><h4 id="laguna-blanca-sports-drive-organizer-2011-2015">LAGUNA BLANCA SPORTS DRIVE, <em>Organizer</em> (<strong>2011-2015</strong>)</h4>
+<ul>
+<li>Organized and oversaw the collection of used sports equipment which were donated to the Goleta Boys &amp; Girls Club</li>
+</ul></li>
+<li><h4 id="santa-barbara-foodbanks-backyard-bounty-community-outreach-volunteer-fundraiser-2014-2018">SANTA BARBARA FOODBANK’S BACKYARD BOUNTY, <em>Community Outreach &amp; volunteer fundraiser</em> (<strong>2014 – 2018</strong>)</h4>
+<ul>
+<li>tasked with leading groups into local residences to harvest fruits and vegetables which are then distributed back to the community by the Foodbank</li>
+</ul></li>
 </ul>
+</div>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<ul>
+<li><h4 id="university-of-california-santa-barbara-2019-present-expected-graduation-spring-2021">UNIVERSITY OF CALIFORNIA, SANTA BARBARA – (<strong>2019 – present | Expected graduation Spring 2021</strong>)</h4>
+<ul>
+<li><h5 id="b.a.-in-geography-with-an-emphasis-in-geographic-information-science-gpa-3.624.0"><em>B.A. in Geography with an Emphasis in Geographic Information Science (GPA: 3.62/4.0)</em></h5></li>
+</ul></li>
+<li><h4 id="santa-barbara-city-college-2016--2018">SANTA BARBARA CITY COLLEGE – (<strong>2016- 2018</strong>)</h4></li>
+<li><h4 id="laguna-blanca-school-graduated-2015">LAGUNA BLANCA SCHOOL – (<strong>Graduated 2015</strong>)</h4></li>
+</ul>
+</div>
+<div id="skills-additional-interests" class="section level2">
+<h2>Skills + Additional Interests</h2>
+<ul>
+<li>Proficient in Microsoft Excel and Word</li>
+<li>Proficient in Python and R -Experience using vectors and raster data to perform spatial analysis</li>
+<li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
+</ul>
+</div>
+<div id="references" class="section level2">
+<h2>References</h2>
+<ul>
+<li>Joe DeVreese, Santa Barbara Running – (805) 729-0138</li>
+<li>Mike Johnson, UCSB phD candidate, instructor in R Spatial analysis - <a href="mailto:jmj00@ucsb.edu" class="email">jmj00@ucsb.edu</a></li>
+<li>Sherrie Todd, The Garden Market – (805) 708-6428</li>
+<li>Wayne Shizuman, Gallup &amp; Stribling Orchids LLC – <a href="mailto:wayne@gallup-stribling.com" class="email">wayne@gallup-stribling.com</a> – (805) 620-8443<br />
+</li>
+<li>Robert Palmer, Robert Palmer Training — (214) 850-5710</li>
+<li>Cate Hogan, Liv. Rip. Waterfowl Conservancy – <a href="mailto:chogan@lrwc.net" class="email">chogan@lrwc.net</a> – (860) 567-2062</li>
+<li>Alexa Senter, Backyard Bounty – (805) 403-8327</li>
+</ul>
+</div>
 </div>
 
 
