--- a/geog176A.html
+++ b/geog176A.html
@@ -312,15 +312,18 @@ $(document).ready(function () {
 
 
 <p>This is my projects section for Geography 176A. This is my first attempt at building a website using RStudio and GitHub.</p>
-<div id="lab-1-learning-points" class="section level1">
-<h1>Lab 1 learning points:</h1>
+<div id="lab-1-learning-points" class="section level5">
+<h5>Lab 1 learning points:</h5>
 <ul>
 <li>create a new repository on GitHub</li>
 <li>using a yml file to give R directions on how to assemble a website</li>
 <li>using R Markdown to add information</li>
 <li>knitting it to a webpage</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">Lab 2: Data Wrangling</a> # learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">Lab 2: Data Wrangling</a></p>
+</div>
+<div id="learning-points" class="section level5">
+<h5>Learning points:</h5>
 <ul>
 <li>reading in data using readr</li>
 <li>Dplyer verbs(select, filter, mutate, group_by, summarize, arrange)</li>
@@ -330,7 +333,10 @@ $(document).ready(function () {
 <li>ggplot (add data, layers, labels, themes, facets)</li>
 <li>testing ’message = FALSE, warning = FALSE, eval = FALSE, echo = FALSE in R Markdown</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">Lab 3: Projections, Distances, and Mapping</a> # learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">Lab 3: Projections, Distances, and Mapping</a></p>
+</div>
+<div id="learning-points-1" class="section level5">
+<h5>Learning points:</h5>
 <ul>
 <li>using Sf package:
 <ul>
@@ -345,7 +351,10 @@ $(document).ready(function () {
 </ul></li>
 <li>assigning labels to specified points on plot</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html">Lab 4: Tesselations, Spatial Joins, and Point-in-Polygon</a> # learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html">Lab 4: Tesselations, Spatial Joins, and Point-in-Polygon</a></p>
+</div>
+<div id="learning-points-2" class="section level5">
+<h5>Learning points:</h5>
 <ul>
 <li>generated centroids as anchor points for tessellations
 <ul>
@@ -368,7 +377,10 @@ $(document).ready(function () {
 <li>function building</li>
 <li>Point-in-polygon analysis</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html">Lab 05: Rasters analysis and Remote Sensing</a> # learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html">Lab 05: Rasters analysis and Remote Sensing</a></p>
+</div>
+<div id="learning-points-3" class="section level5">
+<h5>Learning points:</h5>
 <ul>
 <li>create rasters
 <ul>
@@ -383,7 +395,10 @@ $(document).ready(function () {
 <li>Applying thresholds to raster images</li>
 <li>kmeans analysis</li>
 </ul>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-06.html">Lab 6: Terrain Analysis</a> # learning points:</p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-06.html">Lab 6: Terrain Analysis</a></p>
+</div>
+<div id="learning-points-4" class="section level5">
+<h5>Learning points:</h5>
 <ul>
 <li>Open Street Map
 <ul>
