final website commit_2

--- a/CV.html
+++ b/CV.html
@@ -11,11 +11,11 @@
 
 
 
-<title>Resume</title>
+<title>Resume:</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/darkly.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/journal.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -104,33 +104,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 60px;
+  padding-top: 61px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h2 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h3 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h4 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h5 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h6 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .dropdown-submenu {
   position: relative;
@@ -306,7 +306,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Resume</h1>
+<h1 class="title toc-ignore">Resume:</h1>
 
 </div>
 
@@ -316,20 +316,18 @@ $(document).ready(function () {
 <h1>ANGUS WATTERS</h1>
 </center>
 <center>
-<div id="castillo-st.-santa-barbara-ca-93105-805.895.1590-adwattersgrubsteinucsb.edu" class="section level4">
-<h4>2021 Castillo St. Santa Barbara, CA 93105| 805.895.1590| <a href="mailto:adwattersgrubstein@ucsb.edu" class="email">adwattersgrubstein@ucsb.edu</a></h4>
+<div id="ben-lomond-dr.-santa-barbara-ca-93105-805.895.1590-adwattersgrubsteinucsb.edu" class="section level4">
+<h4>2786 Ben Lomond Dr. Santa Barbara, CA 93105| 805.895.1590| <a href="mailto:adwattersgrubstein@ucsb.edu" class="email">adwattersgrubstein@ucsb.edu</a></h4>
 </center>
-<center>
 </div>
 <div id="work-objective" class="section level2">
-<h2>Work Objective:</h2>
-</center>
-<div id="i-am-a-college-senior-looking-for-a-position-to-utilize-my-responsible-work-ethic-and-enthusiasm-for-learning.-i-am-a-quick-learner-ready-and-willing-to-take-training-for-any-position.-i-have-a-thirst-for-knowledge-and-look-forward-to-continued-growth-after-graduation.-i-believe-to-be-a-responsible-employee-one-must-tackle-every-task-with-diligence-and-care." class="section level4">
-<h4>I am a college Senior looking for a position to utilize my responsible work ethic and enthusiasm for learning. I am a quick learner; ready and willing to take training for any position. I have a thirst for knowledge and look forward to continued growth after graduation. I believe to be a responsible employee one must tackle every task with diligence and care.</h4>
+<h2><strong>Work Objective</strong>:</h2>
+<div id="i-am-senior-expecting-to-graduate-in-the-spring-of-2021-with-a-b.a.-in-geography-with-an-emphasis-on-gis-at-the-university-of-california-santa-barbara.-i-am-looking-for-a-position-to-utilize-my-responsible-work-ethic-and-enthusiasm-for-learning.-i-am-a-quick-learner-ready-and-willing-to-take-training-for-any-position.-i-have-a-thirst-for-knowledge-and-look-forward-to-continued-growth-after-graduation.-i-believe-to-be-a-responsible-employee-one-must-tackle-every-task-with-diligence-and-care." class="section level4">
+<h4>I am senior expecting to graduate in the Spring of 2021 with a B.A. in Geography with an emphasis on GIS at the University of California, Santa Barbara. I am looking for a position to utilize my responsible work ethic and enthusiasm for learning. I am a quick learner; ready and willing to take training for any position. I have a thirst for knowledge and look forward to continued growth after graduation. I believe to be a responsible employee one must tackle every task with diligence and care.</h4>
 </div>
 </div>
 <div id="experience" class="section level2">
-<h2>Experience</h2>
+<h2><strong>Experience:</strong></h2>
 <ul>
 <li><h4 id="soraa-inc.-goleta-ca-intern-spring-2015">SORAA INC. Goleta, CA, <em>Intern</em> (<strong>Spring 2015</strong>)</h4>
 <ul>
@@ -353,7 +351,7 @@ $(document).ready(function () {
 </ul>
 </div>
 <div id="volunteering-experience" class="section level2">
-<h2>Volunteering Experience</h2>
+<h2><strong>Volunteering Experience</strong>:</h2>
 <ul>
 <li><h4 id="laguna-blanca-sports-drive-organizer-2011-2015">LAGUNA BLANCA SPORTS DRIVE, <em>Organizer</em> (<strong>2011-2015</strong>)</h4>
 <ul>
@@ -366,7 +364,7 @@ $(document).ready(function () {
 </ul>
 </div>
 <div id="education" class="section level2">
-<h2>Education</h2>
+<h2><strong>Education</strong>:</h2>
 <ul>
 <li><h4 id="university-of-california-santa-barbara-2019-present-expected-graduation-spring-2021">UNIVERSITY OF CALIFORNIA, SANTA BARBARA – (<strong>2019 – present | Expected graduation Spring 2021</strong>)</h4>
 <ul>
@@ -377,22 +375,24 @@ $(document).ready(function () {
 </ul>
 </div>
 <div id="skills-additional-interests" class="section level2">
-<h2>Skills + Additional Interests</h2>
+<h2><strong>Skills + Additional Interests</strong>:</h2>
 <ul>
 <li>Proficient in Microsoft Excel and Word</li>
-<li>Proficient in Python and R -Experience using vectors and raster data to perform spatial analysis</li>
+<li>Proficient in Python and R
+<ul>
+<li>Experience using vectors and raster data to perform spatial analysis</li>
+</ul></li>
 <li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
 </ul>
 </div>
 <div id="references" class="section level2">
-<h2>References</h2>
+<h2><strong>References</strong>:</h2>
 <ul>
 <li>Joe DeVreese, Santa Barbara Running – (805) 729-0138</li>
 <li>Mike Johnson, UCSB phD candidate, instructor in R Spatial analysis - <a href="mailto:jmj00@ucsb.edu" class="email">jmj00@ucsb.edu</a></li>
 <li>Sherrie Todd, The Garden Market – (805) 708-6428</li>
 <li>Wayne Shizuman, Gallup &amp; Stribling Orchids LLC – <a href="mailto:wayne@gallup-stribling.com" class="email">wayne@gallup-stribling.com</a> – (805) 620-8443<br />
 </li>
-<li>Robert Palmer, Robert Palmer Training — (214) 850-5710</li>
 <li>Cate Hogan, Liv. Rip. Waterfowl Conservancy – <a href="mailto:chogan@lrwc.net" class="email">chogan@lrwc.net</a> – (860) 567-2062</li>
 <li>Alexa Senter, Backyard Bounty – (805) 403-8327</li>
 </ul>
