--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/darkly.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/journal.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -104,33 +104,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 60px;
+  padding-top: 61px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h2 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h3 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h4 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h5 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h6 {
-  padding-top: 65px;
-  margin-top: -65px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .dropdown-submenu {
   position: relative;
@@ -311,12 +311,11 @@ $(document).ready(function () {
 </div>
 
 
-<center>
-<div id="hello-my-name-is-angus" class="section level2">
-<h2>Hello, my name is Angus</h2>
-</center>
-<p>I am 23 years old and was born and raised in Santa Barbara, California.I am in my final year at UCSB. My interests include running, biking, making art, computer science, and GIS. I am looking forward to learning as much as I can from 176A and the rest of the remote sensing courses. <a href="https://www.hurtigruten.com/globalassets/photos/inspiration/northern-lights/hub/aurora-borealis-above-snowy-island-vestvagoya-lofoten_swen-stroop.jpg?width=1900&amp;height=950&amp;center=0.57,0.51&amp;transform=DownResizeCrop">This is the next item on my bucket list!</a></p>
-</div>
+<p>My name is Angus Watters and I am senior expecting to graduate in the Spring of 2021 with a B.A. in Geography with an emphasis on GIS at the University of California, Santa Barbara. I am proficient in both R and Python and able to work with large data sets to perform statistical and data analysis. I am interested in working in the field of water resources and environmental conservation.</p>
+<p>I am 23 years old and was born and raised in Santa Barbara, California. My interests include running, biking, art, computer science, and GIS.</p>
+<p>Email: <a href="mailto:adwattersgrubstein@umail.ucsb.edu" class="email">adwattersgrubstein@umail.ucsb.edu</a></p>
+<p>GitHub: <a href="https://github.com/anguswg-ucsb" class="uri">https://github.com/anguswg-ucsb</a></p>
+<p><img src="img/UCSB-about-me.jpg" /></p>
 
 
 
