CV and index commit

--- a/CV.html
+++ b/CV.html
@@ -286,7 +286,7 @@ div.tocify {
 </li>
 <li>
   <a href="geog176A.html">
-    <span class="fa fa-globe"></span>
+    <span class="fa fa-globerma"></span>
      
     Projects
   </a>
@@ -334,8 +334,8 @@ div.tocify {
 <div id="work-objective" class="section level2">
 <h2><strong>Work Objective</strong>:</h2>
 <hr />
-<div id="i-am-senior-expecting-to-graduate-in-the-spring-of-2021-with-a-b.a.-in-geography-with-an-emphasis-on-gis-at-the-university-of-california-santa-barbara.-i-am-looking-for-a-position-to-utilize-my-responsible-work-ethic-and-enthusiasm-for-learning.-i-am-a-quick-learner-ready-and-willing-to-take-training-for-any-position.-i-have-a-thirst-for-knowledge-and-look-forward-to-continued-growth-after-graduation.-i-believe-to-be-a-responsible-employee-one-must-tackle-every-task-with-diligence-and-care." class="section level4">
-<h4>I am senior expecting to graduate in the Spring of 2021 with a B.A. in Geography with an emphasis on GIS at the University of California, Santa Barbara. I am looking for a position to utilize my responsible work ethic and enthusiasm for learning. I am a quick learner; ready and willing to take training for any position. I have a thirst for knowledge and look forward to continued growth after graduation. I believe to be a responsible employee one must tackle every task with diligence and care.</h4>
+<div id="i-am-a-senior-expecting-to-graduate-in-the-spring-of-2021-with-a-b.a.-in-geography-with-an-emphasis-on-gis-at-the-university-of-california-santa-barbara.-i-am-looking-for-a-position-to-utilize-my-responsible-work-ethic-and-enthusiasm-for-learning.-i-am-a-quick-learner-ready-and-willing-to-take-training-for-any-position.-i-have-a-thirst-for-knowledge-and-look-forward-to-continued-growth-after-graduation.-i-believe-to-be-a-responsible-employee-one-must-tackle-every-task-with-diligence-and-care." class="section level4">
+<h4>I am a senior expecting to graduate in the Spring of 2021 with a B.A. in Geography with an emphasis on GIS at the University of California, Santa Barbara. I am looking for a position to utilize my responsible work ethic and enthusiasm for learning. I am a quick learner; ready and willing to take training for any position. I have a thirst for knowledge and look forward to continued growth after graduation. I believe to be a responsible employee one must tackle every task with diligence and care.</h4>
 </div>
 </div>
 <div id="experience" class="section level2">
