--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ div.tocify {
 </li>
 <li>
   <a href="geog176A.html">
-    <span class="fa fa-globe"></span>
+    <span class="fa fa-globerma"></span>
      
     Projects
   </a>
@@ -328,7 +328,7 @@ div.tocify {
 <div id="welcome-to-my-website-my-name-is-angus-watters" class="section level3">
 <h3>Welcome to my website, my name is Angus Watters!</h3>
 <hr />
-<p>I am senior majoring in Geography with an emphasis on GIS at the University of California, Santa Barbara with an expected graduation date of Spring 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.</p>
+<p>I am a senior majoring in Geography with an emphasis on GIS at the University of California, Santa Barbara with an expected graduation date of Spring 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.</p>
 <p>As I near graduation, I am searching for opportunities where I can both apply and improve my skills in cleaning, organizing, and analyzing spatial and non-spatial data. I hope to find a position which matches my interest in environmental conservation, resource management, and data curation.</p>
 <p>Some of my outside interests include running, biking, art, gardening, and cooking.</p>
 <hr />
